[package]
name = "remove_macro_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.86", default-features = false, features = ["parsing", "proc-macro", "derive"] }
proc-macro2 = "1.0.36"

[lib]
proc-macro = true
